--- a/application.json
+++ b/application.json
@@ -12,6 +12,10 @@
     {
       "id": "Dashboard",
       "isDefault": false
+    },
+    {
+      "id": "UserDetails",
+      "isDefault": false
     }
   ]
 }
