updated page name UserDetails to WorkflowDetails

--- a/application.json
+++ b/application.json
@@ -14,7 +14,7 @@
       "isDefault": false
     },
     {
-      "id": "UserDetails",
+      "id": "WorkflowDetails",
       "isDefault": false
     }
   ]
